# patchoulib_resource_core

./: Cargo.toml  LICENSE  README.md
src/: config_loader.rs  main.rs
src/config/: mod.rs
src/config/connections/: db_connection.rs  mod.rs  redis.rs  s3_connection.rs
src/config/parser/: db_config.rs  mod.rs  redis_config.rs  s3_config.rs
src/connections/: db_connection.rs  mod.rs  s3_connection.rs
src/db/: mod.rs
src/epub_packager/: constant_files.rs  file_collect.rs  mod.rs  xml_tags.rs
src/meta_manage/: mod.rs
src/models/: book_item.rs  book_series.rs  file_mapping.rs  mod.rs  nav_point.rs  operate_log.rs
src/proto/concepts/: book_item.proto  book_series.proto
src/proto/get_book/: get_epub_url.proto  get_image.proto  get_item_meta.proto  get_meta.proto  get_page.proto  search.proto
src/proto/manage_meta/: add_book_series.proto  reorder.proto
src/proto/rpc_epub/: get_epub.proto
src/proto/upload_book/: upload_full_book.proto  upload_image.proto  upload_to_book_item.proto  upload_xhtml.proto
src/resource_mapping/: mod.rs
src/utils/: mod.rs
src/utils/config_parser/: db_config.rs  mod.rs
src/utils/epub_page_object/: html.rs  mod.rs  tags.rs
src/utils/functions/: mod.rs
src/utils/functions/filter/: clean_html.rs  mod.rs
src/utils/functions/map/: mod.rs  simplify_tags.rs
src/utils/functions/reducer/: epub_name.rs  mod.rs
