[package]
name = "patchoulib_resource_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tokio = "1.35.1"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
diesel = { version = "2.1.0", features = ["postgres"] }
r2d2 = "0.8.10"
rust-s3 = "0.33.0"
redis = "0.24.0"

