[package]
name = "patchoulib_resource_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.31.0", features = ["async-tokio", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tokio = "1.35.1"
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-json", "postgres-array", "serde_json", "json-array" ] }
r2d2 = "0.8.10"
rust-s3 = "0.33.0"
redis = "0.24.0"
uuid = "1.7.0"
zip = "0.6.6"
sha1 = "0.10.6"

